[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagebrain"
version = "0.0.1"
description = "Light-weight LLM serving with PagedAttention"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pagebrain = "pagebrain.endpoints.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
